tests/invalid/Old_Invalid_12.whiley
variant broken(&int p)
where *p == old(*p)

method m(&int x):
    //
    assert broken(x)